@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <server>
   <listeners>
-    <listener type="PF_INET" ip_address="0.0.0.0" port="2345"/>
-    <listener type="PF_UNIX"/>
+    <listener type="PF_INET" ip_address="192.168.1.2" port="2345"/>
+    <listener type="PF_INET" ip_address="127.0.0.1" port="3456"/>
   </listeners>
   <managers>
     <manager file="/tmp/lixad_status1"/>
